WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201462
[WPE][GTK] Fix sandbox parsing DISPLAY on X11
https://bugs.webkit.org/show_bug.cgi?id=201462
Summary
[WPE][GTK] Fix sandbox parsing DISPLAY on X11
Patrick Griffis
Reported
2019-09-04 10:17:54 PDT
[WPE][GTK] Fix sandbox parsing DISPLAY on X11
Attachments
Patch
(2.15 KB, patch)
2019-09-04 10:20 PDT
,
Patrick Griffis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2019-09-04 10:20:18 PDT
Created
attachment 377987
[details]
Patch
Michael Catanzaro
Comment 2
2019-09-04 10:28:21 PDT
Comment on
attachment 377987
[details]
Patch OK, so instead of /tmp/.X11-unix/X1.1 we need to create /tmp/.X11-unix/X1.
WebKit Commit Bot
Comment 3
2019-09-04 11:13:09 PDT
Comment on
attachment 377987
[details]
Patch Clearing flags on attachment: 377987 Committed
r249487
: <
https://trac.webkit.org/changeset/249487
>
WebKit Commit Bot
Comment 4
2019-09-04 11:13:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug