[WPE][GTK] Fix sandbox parsing DISPLAY on X11 https://bugs.webkit.org/show_bug.cgi?id=201462

Reviewed by Michael Catanzaro.

On some setups the DISPLAY env var was incorrectly parsed.

* UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::bindX11):


Canonical link: https://commits.webkit.org/215099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249487 268f45cc-cd09-0410-ab3c-d52691b4dbfc